crates/apollo-compiler/test_data/diagnostics/0022_duplicate_interface_definitions.txt
Error: the type `NamedEntity` is defined multiple times in the schema
   ╭─[0022_duplicate_interface_definitions.graphql:9:11]
   │
 5 │ interface NamedEntity {
   │           ─────┬─────  
   │                ╰─────── previous definition of `NamedEntity` here
   │ 
 9 │ interface NamedEntity {
   │           ─────┬─────  
   │                ╰─────── `NamedEntity` redefined here
   │ 
   │ Help: remove or rename one of the definitions, or use `extend`
───╯

